# plebscript

./: Cargo.toml  README.md  fastly.toml
.cargo/: config.toml
fastly/: Cargo.toml  fastly.toml
fastly/src/: main.rs
src/: lib.rs  main.rs  webscript.lua
tests/: basic.rs
www/src/: dumpreq.lua  init.lua
www/src/examples/: fileupload.lua  hellohtml.lua  helloname.lua  makinghttprequests.lua
www/src/returns/: number.lua  numberstring.lua  string.lua  stringtable.lua  table.lua  tabletable.lua
