[workspace]
members = [
  "fastly"
]

[package]
name = "plebscript"
version = "0.1.0-dev"
authors = []
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.93"
piccolo = { git = "https://github.com/kyren/piccolo.git", rev = "fcbaabc924292170d6549c55440ecbd0522b275a"}
piccolo-util = { git = "https://github.com/kyren/piccolo.git", rev = "fcbaabc924292170d6549c55440ecbd0522b275a"}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
